--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,8 +14,11 @@
   </head>
 
   <body>
+ 
   <%= render partial: "shared/header" %>
+   
   <div class="container">
+    <%= render partial: "shared/flash" %>
     <%= yield %>
   </div>
   </body>
