--- a/app/views/shared/_flash.html.erb
+++ b/app/views/shared/_flash.html.erb
@@ -4,8 +4,8 @@
 </div>
 <%end%>
 
-<% if flash[:alarm] %>
+<% if flash[:alert] %>
 <div class="alert alert-warning mt-4">
-    <%= flash[:alarm] %>
+    <%= flash[:alert] %>
 </div>
 <%end%>
