--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,9 @@
 <div class = "d-flex align-items-center justify-content-center">
 <h1>Welcome to Word Dictionary API</h1>
+</div>
+
+<% if @user %>
+    Logged in as: <%= @user.email%>
+    <%# <%= link_to "Logout" , logout_path , method: :delete %> %>
+    <%= button_to "Logout" , logout_path, method: :delete%>
+<%end%>
