--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,6 +1,26 @@
 <nav class="navbar navbar-dark bg-primary">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">Navbar scroll</a>
+    
+
+    <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+        <% if Current.user %>
+        <li class="nav-item">
+            <span>Logged in as: <%= Current.user.email%></span>
+        </li>
+        <li class="nav-item">
+            <%= button_to "Logout" , logout_path, method: :delete , class:"nav-link" %>
+        </li>    
+        <%else%>
+        <li class="nav-item">
+            <%= link_to "Sign Up" , sign_up_path , class:"nav-link" %>
+        </li>
+        <li class="nav-item">
+            <%= link_to "Login" , sign_in_path , class:"nav-link" %>
+        </li>
+        <%end%>    
+    </ul>
+
   </div>
   <%# <%= link_to '<button type="button">Login</button>'.html_safe, root_path %>
   
