Show dictionary variable path and users new API generation

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,5 +1,8 @@
 <div class = "d-flex align-items-center justify-content-center">
         <% if Current.user %>
+           <%# <%= Current.user.id %> %>
+           <%= button_to 'Generate Key', apis_path, class:"btn btn-success" %>
+            
            <table class="table">
                 <thead class="thead-dark">
                     <tr>
@@ -9,21 +12,15 @@
                     </tr>
                 </thead>
                 <tbody>
+                <% x = 1 %>
+                <% Api.all.each do |data| %>
                     <tr>
-                    <th scope="row">1</th>
-                        <td>Mark</td>
-                        <td>Otto</td>
+                    <th scope="row"><%= x %></th>
+                        <td><%= data.apikey %></td>
+                        <td><%= data.count %></td>
                     </tr>
-                    <tr>
-                    <th scope="row">2</th>
-                        <td>Jacob</td>
-                        <td>Thornton</td>
-                    </tr>
-                    <tr>
-                    <th scope="row">3</th>
-                        <td>Larry</td>
-                        <td>the Bird</td>
-                    </tr>
+                    <% x = x + 1 %>
+                <% end %>    
                 </tbody>
             </table>
         <%else%>
