--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-dark bg-primary">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Navbar scroll</a>
+    <a class="navbar-brand" href="#">Word Dictionary API</a>
     
 
     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
@@ -9,7 +9,7 @@
             <span>Logged in as: <%= Current.user.email%></span>
         </li>
         <li class="nav-item">
-            <%= button_to "Logout" , logout_path, method: :delete , class:"nav-link" %>
+            <%= button_to "Logout" , logout_path, method: :delete , class:"btn btn-danger" %>
         </li>    
         <%else%>
         <li class="nav-item">
