--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,23 +1,25 @@
 <nav class="navbar navbar-dark bg-primary">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Word Dictionary API</a>
+    <a class="navbar-brand fw-bold" href="#">Word Dictionary API</a>
     
 
     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
         <% if Current.user %>
-        <li class="nav-item">
-            <span>Logged in as: <%= Current.user.email%></span>
-        </li>
-        <li class="nav-item">
-            <%= button_to "Logout" , logout_path, method: :delete , class:"btn btn-danger" %>
-        </li>    
-        <%else%>
-        <li class="nav-item">
-            <%= link_to "Sign Up" , sign_up_path , class:"nav-link" %>
-        </li>
-        <li class="nav-item">
-            <%= link_to "Login" , sign_in_path , class:"nav-link" %>
-        </li>
+            <li class="nav-item">
+            <div class="badge bg-info mb-3 text-wrap" style="width: 6rem;">
+                    <span>Logged in as: <%= Current.user.email%></span>
+            </div>    
+            </li>
+            <li class="nav-item mb-2">
+                <%= button_to "Logout" , logout_path, method: :delete , class:"btn btn-danger" %>
+            </li>    
+            <%else%>
+            <li class="nav-item">
+                <%= link_to "Sign Up" , sign_up_path , class:"nav-link" %>
+            </li>
+            <li class="nav-item">
+                <%= link_to "Login" , sign_in_path , class:"nav-link" %>
+            </li>
         <%end%>    
     </ul>
 
