--- a/app/views/registrations/new.html.erb
+++ b/app/views/registrations/new.html.erb
@@ -14,6 +14,7 @@
        <%= form.label :email %>
        <%= form.text_field :email, class:"form-control" , placeholder: "abc@xyz.com" %>
     </div>
+     <%= render partial: "shared/plan" %>
      <div class="mb-3">
        <%= form.label :plan_type %>
        <%= form.text_field :plan_type, class:"form-control" , placeholder: "1 or 2 or 3" %>
