--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,23 +1,28 @@
 
         <% if Current.user %>
-           <%= button_to 'Generate Key', apis_path, class:"mb-3 mt-3 btn btn-success" %>
-            
+            <div class="d-flex flex-row justify-content-between">
+                <div class="p-2"><%= button_to 'Generate Key', apis_path, class:"mb-3 mt-3 btn btn-success" %></div>
+                <div class="p-2 mb-3 mt-4 mr-10 btn btn-dark">Total Usage :<%= User.find_by(id: Current.user.id).usage %></div>
+            </div>
            <table class="table">
-                <thead class="thead-dark">
+                <thead class="thead-dark bg-secondary text-white">
                     <tr>
                     <th scope="col">#</th>
                     <th scope="col">API key</th>
+                    <th scope="col"></th>
+                    <th scope="col">Created on</th>
                     <th scope="col">Usage</th>
                     </tr>
                 </thead>
                 <tbody>
                 <% x = 1 %>
-                <% Api.all.each do |data| %>
+                <% Api.where("userid": Current.user.id).each do |data| %>
                     <tr>
                     <th scope="row"><%= x %></th>
                         <td><%= data.apikey %></td>
+                        <td><a data-confirm="Are you sure?" class="btn btn-outline-danger mr-5" data-method="delete" href="/apis/del/<%=data.id%>">Delete</a></td>
+                        <td><%= data.created_at %></td>
                         <td><%= data.count %></td>
-                        <td><a data-confirm="Are you sure?" class="btn btn-primary " data-method="delete" href="/apis/del/<%=data.id%>">Delete</a></td>
                     </tr>
                     <% x = x + 1 %>
                 <% end %>    
