--- a/app/views/shared/_plan.html.erb
+++ b/app/views/shared/_plan.html.erb
@@ -2,7 +2,7 @@
   <div class="col-sm-3">
     <div class="card border border-success rounded" style="background-color: palegreen;">
       <div class="card-body" style="color: darkgreen;">
-        <h5 class="card-title">Plan 1</h5>
+        <h5 class="card-title">Basic Plan</h5>
         <p class="card-text">500 API Calls / Day</p>
         <p class="card-text">Upto 5 API Keys</p>
       </div>
@@ -11,7 +11,7 @@
   <div class="col-sm-3">
     <div class="card border border-primary" style="background-color: powderblue;">
       <div class="card-body" style="color: darkblue;">
-        <h5 class="card-title">Plan 2</h5>
+        <h5 class="card-title">Advanced Plan</h5>
          <p class="card-text">2000 API Calls / Day</p>
         <p class="card-text">Upto 10 API Keys</p>
       </div>
@@ -20,7 +20,7 @@
   <div class="col-sm-3">
     <div class="card border border-warning" style="background-color: bisque;">
       <div class="card-body" style="color: brown;">
-        <h5 class="card-title">Plan 3</h5>
+        <h5 class="card-title">Expert Plan</h5>
          <p class="card-text">10000 API Calls / Day</p>
         <p class="card-text">Unlimited API Keys</p>
       </div>
